--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'http://example.org/'
+baseURL: 'https:www.madhuriyoga.com/'
 languageCode: 'en-us'
 title: 'Madhuri Yoga'
 theme: 'madhuriYoga'
