Corrected the issues in facebook link

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https:www.madhuriyoga.com/'
+baseURL: 'https://www.madhuriyoga.com/'
 languageCode: 'en-us'
 title: 'Madhuri Yoga'
 theme: 'madhuriYoga'
